tooling/nargo_cli/tests/snapshots/execute__tests__regression_force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "10004545166562953849",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "array",
          "length": 5,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      },
      {
        "name": "z",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "u",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 16
        },
        "visibility": "private"
      },
      {
        "name": "v",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 16
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+2da5MW1RHHe3e5g1xcFsEgWbxxUXCevcCuYMJVNBoRA5hoorKwq4lGQERQEy+AGEUMYKKJRlwDaDTR8B3yLp8hlVd5kw+RqmzD6eI8MwOWO78eZqr2VK1nnRmaf3f/u/ucPvM8tMjFcX7k59aWi7/r1BZmHZNS11pyrrXmXGvLuTYu59qEkZ+ZqWsTw7VxAUOrZIfhWxPmpNhojOdkJTlwi8pu2C+xLSaFeXLacXrj36lr+lBnClSboxG7kxU9PYMruwYb3Y0dSVf/QF9v0tM7sKKv0dfo7evd1dXX3T3Y19O3sn+gf2XS3+jpHmwM9fZ3DQVZk4rL6g6yksni49zWlP2K4iR1npKj82hlxjyaErg1Ti4lhPRocbQLoYuNqZ6Ap+YQpCj4qcIF6zRQXy8bTpPLZ/rRyp8mbDKg9Z4c9L4cd77tMLmkv68BbRgnF5W7UL5d5a9AcbDq3JsD16XyTw/zDDOIGVAvdKYAtDkarGiVnw7imuHkSJpw04VL4mUukUFZHktkg9kUKDPDPMsMYoFi+4v42iy5lHls0EtkAYg0OHRhNGYKR8pZnI5JmaScKXUgZdIV2+LaMLebQYyAemNi6lq7ZNfYNCkJIgVSDl0rHCnbpZ6kBGWVlilnh7nDDGIE1BvpTNkh9cqUs4UjZYdcHVJWaJ3byIHrss6dE+brzCBGwDlyqftg1/ShzhSoKq9954C4rgOdW2ambJH6Zcq5YZ6n9qCjVEnR7mBospTGQafGSFcHNcz4yxCGWBLMEb7agPZpzAP1vZ7DNRT76PrIRzZYmzaSuRW16XeETTpeHKc6gGE0cbwoxvmwDWld1SfzYc7Ml0uD0n2s2GZgNhXbG8K8wAxiCUxvpAvPAvHflsRGLLotuUE4gi4QH+fSZ5xkUH4X9Kvxi+SKJtwO4QtEp1ydBFShLWhXDlyXLejCMN9oBrFks1CyW1B9qDMFqspb0IUgrhtB55ZZFVulflXxpjDfLA5bUCVFnbagaoz0SkAN47kFXSjV3oLeDOp7C4eraQt6i/hvQW+qqE1vFTbpeHG8ylvQRbANaV1V3iKYM4vk0qB0Hyu2GZhNxXZxmJeYQSyB6Y104Vki/lvQ2IhFt6CLhSPoErk6pKzQtqQ7B67LtmRpmG8zgxgBl0p2W6IPdaZAVXlbshTEdRvsXA/ytQufJMB33tGqfTsoK+b47YHjY0fqGdlNiWNZmJebQcyAyySbOJZLvRLHMhDXctC5Y13+DMwmUt5hMiN7uOxpSCNbkCj49DJQFfmmvW2V9ElAXA2QJLFNG5FNaVvam5YU7vbAC8o/7YFTVT7NugP0RyJsEvPoZS5zjumisshi2AXaLs8fhN3y/JEUG2hPlvRHt7DxQfe+9NQTfEWkoSe9nQ686ZFq55m5wY603r0V11t1XuCg94qK663nFYsc9F5Zcb1V5yUOeveBeo+9KZGR3bSJ6w/znWYQW7j3S7azoA91pkBVubPQD+K6E3Tu2OFNBmYTKVeFebXUsLOg4NOdBVWkTp2F1SCuu0CSxDa9S/w6C0pGurOwCvRPe+BUlQ8pV4H+WC3VXgmpP/ql2p0Fshh+D7Rdnj8Iu+X5Iyk20M4C6Y/vS7XjQzsfKxz8vKYGeq900Hut+Czq4I5SF/gFfch5dqhNOxx0vdBJJzuuyp2eyDeQ7l0eui9w0L0X1D3+yjNad13nkPUwzuWg33s9dF/ioPtaXnctPS65vY/H2l9mc2CC+NQRAXH2Jc0dq3VhXm8GsQ3hOsl2rPShGSlQ9KJwAuT8EUUb64RLdus5HXPbqNSixr6EaELwIZ2kIJJf6N6tk+oHzMjYFftpQ5g3mtMsOPTGtNQ1fSj9KjTtkI3CkfxuDlfTN+beHdnBi+jjYLt6Eb2gvj0bQH9vFDaptUj2m9ryfJ4UG40NIO4Y7yZPwJsc5N4DksFL73siA0NyPbB2aZAqXqrtqAGbwKsQMvjvFS7BRS7OFLiiOEmO/wDkdpkJj0zUMd77PAHf5yD3fql2wlO9748MDMlFP+FqKydNTIoX3MLRy3p0dftD2B826IRHcvwB0Bce8aI+eUD4eCmz7zNRfHhF2iTd99kc5gfNILZV2yzZvo8+5N33iY1YtO+zWbgAelDqSco6NiO3hPkhM4gRcItkSakP1akZuUU4Uj4kLCnTy1h6paHBrUFJ976gzHth1bIZtGlsyx95G9UzEyejHxmjFiX9VmEzGp1x1dFbI8dTepd1WrBFqn1asEV8KhrNA5Knsc+3hXm7gbZKqDdmpK5tF//quFU4km8HZT0Myopt+nBkU2rPlw5ACvfWwAvPFVEy+pEJaJI/ScEh0aD39ttAWT+GdO5LfPpLmwOnaQ6CKzV0Vf4TkINlNpe3gbhjvI94An7EQe6jIBm89H40MjAk1+U0TZOTBgS9oiQT6E+lHkWD5OXPQF+UmaTIAh/jfcwT8GMOch+Xaicp1fvxyMCQXJcVilZ/xUufgIFb1Qa5M3pC6pHwSI7vAH3hES9PjMjYIXy8jB02NI/0YcNAmHeaQWybPyDZwwZ9qE6HDQPCBdBO8SWlRy9zQKrdyxyQ6geMwoz9tCvMg+Y0Cw69kX7zWR/yfvN5UDiSD3G4emM7DInvm88DUu03nwc4fVfsAv09KGxSK2sbtAvEHeN90hPwkw5ynwLJ4KX3U5GBIbkuvRoNUsVLv/lMrkLI4P+5cAkucjG+DSI5/guQ22UmPDJRx3if9gT8tIPcZ6TaCU/1fiYyMCTXpe+jiUnx0n0fcFmPrm5/CfvDBp3wSI4/C/rCI17UJ89KNl4KcntXmd/RSO4UcuBismNb7A7zHjOIbdV2S7bvow/NTIGiv5aK6vuosrtBXHtAB9SxGWmvRaQHZZPYFnvD/JwZxAi4V7Kk1Ie+iZRJsdEgSblXOFI+Bzq3TFJCwVQqKfeF+XkziBFwn2RJqQ95k3KPcKTcJxwpn4edS5fpvZEzQX/UMoB05MB1OWLaH+YXzCAWLPslG0D6kPcRExVAesS0XziCviC+pKT3j3uCD+kTDXLJtV+qHzBJ6ojpQJgPmtMsOPRG+ohJH/I+YjooHMlf5HA1HTG9KH5HTEZ0+ojJi+hFj5gOgP4+KGxSK6vjegDEHeN9yRPwSw5yXwbJ4KX3y5GBIbkuR0wapIqXPmIiVyFk8P9KuAQXuRjvuJIc/zXI7TITHpmoY7yveAJ+xUHuq1LthKd6vxoZGJLrcsSkiUnx0kdM4LIeXd2+BvvDBp3wSI6/DvrCI15eG5HxumTjpWDR7a3pl+t4/DNgFzDqf2JbHArzYTOIbdUOSbbvow95N06pL9dRWYeEC6DDoHPrSMoyu/lHwvyGGcQIeESypNSH6kTKI8KR8g3QuWWSkgqmMkl5NMxvmkGMgEclS0p9yJuUh4Uj5VHhSPmmk3Np+5GBSNrvN5yOpTbjSNwx3rc8Ab/lIPdtkAxeer8dGRiS63IefCRgpU9LjlTU33Wswjpy4LqcUx8L8ztmEKu4xyRbhfUh73NqqgrrOfUxkEjvCFtFdJRByjp+Pvd4mN81gxgBj0uWlPpQnT6fe1w4Ur4rvksbujOqwa1BSVcfKPNe2KMcE59l12+9jeqZiZPRj4xRi5L+hPgusZJio6GOPhE5ntK7rA/QH5dqf4D+uPhUNJoHJE9jn58M8ykDbZVQb6S/DPSU+FfHE8KR/BQo6z1QVmzT98T3y0DJFcKJwIsqfxkoqe8p8UkO9FnkSVDW7yCdvb4M9FjgNM1BcKWGrsp/D3KwzIbjSRB3jPd9T8DvO8j9ACSDl94fRAaG5Lq8/afJSQOCXlGSCfQPUo+iQfLyj6AvykxSZIGP8X7oCfhDB7kfSbWTlOr9UWRgSK7LCkWrv+Kl39gDt6oNcmf0J6lHwiM5/jHoC5KDsU8+FjxeesZOwJpH+rDhdJg/MYPYNv+0ZA8b9KE6nYCdFo6gn3A6jn18ODXSpBwO86dmECPgsGRJqQ/V6ePDw8KR8lNhSVnGCZgGZZVPwE6DNo1t+Wdvo1b5BIzMxGeEzWh0xlVHn4kcT+ld1uf7h6Xan+8fFp+KRvOA5Gns87NhPmegrRLqjfQJ2Dnxr45nhCP5OVDWZ6Cs2Kafid8JmAUghftM4IXniigZ/cgENMmfpOCQaNB7+7OgrM8hnb1OwE4HTtMcBFdq6Kr8LyAHy2wunwVxx3i/8AT8hYPcL0EyeOn9ZWRgSK7LCZgmJw0IekVJJtC/Sj2KBsnLv4G+KDNJkQU+xvuVJ+CvHOR+LdVOUqr315GBIbkuK5RhubhTok/AhsWH+EX9/XepR8IjOX4e9AXJwdgn54WNlxFq71Sc1jqaFMlvCf5qC/fHj/zoe40TJTvaot/vDfP6//1r0/lTRxfHz/3jCvf+G+aO/6ydt/efn2+0660pbJPDPCXC2SbcgsTkT/WRn+TZb0r0+9TUPdN/XM6fa7nM/7em5is9e6WifE3OPZPZHuYYr+kxOTV3RHJBWzZM/mwf+bm+6oh+n53SM7b3GgiDybMYGy/Z0Zq6Z8+mY6aFx9dIY2nL+btsGGdmR9fMnv8HAvi5zXL2AAA=",
  "debug_symbols": "tZxbTiNJEEX34m8+8hUZGWxlNGrxMC1LyCADI41Q731MyzbIReGeY+4f5cpzA4kTGUXK9uvidnn98vPHan338LS4/Ot1cf9wc/W8elhvr14X/vulp8er9dvV0/PV5nlxWUrqF4vl+vbtx9J/XSzuVvfLxaWlXxeTxa3Zbm2z8XHp3xeLIU0PaXpO2visjS/a+KqNb9p408Z3bby2Z/O3Nq3X4/iQxpekjc/a+PO71nrdrTXvx/FVG9+08aaNP79rLfZre0nH8a6NH9r4kMbX87u2+yE+8nF81sYXbXzVxp/ftd72beXdj+NNG9+18a6NP79rh5Xd2jEZ5TWk8S1p47M2vmjjqza+aeNNG39+10baP0ZFPn6Maq6NH9r4kMabdtaadtZakW7IVrXx2llr2llrXbopmGvjtbPWtLO2a2dt187arp21XTtre5NuyN208dpZ27Wztg/pltZDGu9JG5+18ed3bU6Hv21OpRwXqOoC39C5Ub7IN3F+F+e7OP/87s05+b5AnmwPHuICI6kLZHWBoi5Q1QWauoCpC3R1Af+GAr0dCvhxJw/t/7xD+/QcSfrbR9Zuo1HE+VWcLx7Doe7fUPdvuLqAehKHehJvn/TkFbK8QpFXqPIKTTxrcprp5xqHCs0n0EyPetpDLcUEcgINAgWA5t6D9DX0qcV1u3IH1Zb7BCoEqgRqBDICdQI5gQaBAkCfv7/lFESMKMSIQowoxIhCjCjEiEKMKMSIQoyoxIh62oiSJ9CMEdUOUEsTqBKoEcgI1AnkBBoECgC1RKBMIGJEI0Y0YkQjRjRiRCNGNGJEI0YYMcKIEUaMMGKEESOMGGHECCNGGDHCiBGdGNH/wAibQDNG2Puo6ZP51CuBGoGMQJ1ATqBBoACQJwJlAhEjnBjhxAgnRjgxwokRToxwYsQgRgxixDhthE8eR8eMEeN9NxqTU4LRCGQE6gRyAg0CBYAiESgTqBCIGBHEiCBGxGkjYvpxGSfQIFD8f6ikRKBMoEKgSqBGICNQJ5ATaBCIGJGJEZkYkYkRmRiRiRGZGJH/wIiYQJ8bYeUwPq22CTQIFACaObM8AWUCFQJVAjUCGYE6gYgRhRhRiBGVGFGJEZUYUYkRdc6I9g7ZBDICdQI5gQaBAkAtESgTqBCoEogY0YgRjRjRiBGNGNGIEUaMMGKEESOMGGHECCNGGDHCiBFGjDBiRCdGdGJEJ0bMnFlarl9BM0b0fICm3xIwc2Z5AuoEcgINAgWAZs4sT0CZQIVAlUDECCdGODHCiRFOjHBixCBGDGLEIEYMYsQgRgxixCBGDGLEIEYMYkQQI4IYEcSImTNLazEHbS+uN6v7+9XPHx+/ymv78j9Xm9XV9f1yd3n3sr75cPf538f9nT3/uHm4Wd6+bJZvSb/vbeP/Aw==",
  "file_map": {
    "50": {
      "source": "global NIBBLE_LENGTH: u32 = 16;\n\nstruct U4 {\n    inner: u8,\n}\n\nimpl U4 {\n    fn zero() -> U4 {\n        U4 { inner: 0 }\n    }\n\n    fn from_u8(x: u8) -> U4 {\n        U4 { inner: x % 16 }\n    }\n}\n\nimpl Eq for U4 {\n    fn eq(self, other: Self) -> bool {\n        self.inner == other.inner\n    }\n}\n\nfn compact_decode<let N: u32>(input: [u8; N], length: Field) -> ([U4; NIBBLE_LENGTH], Field) {\n    assert(2 * input.len() <= NIBBLE_LENGTH);\n    assert(length as u32 <= input.len());\n\n    let mut nibble = [U4::zero(); NIBBLE_LENGTH];\n\n    let first_nibble = U4::from_u8(input[0] >> 4);\n    let parity = first_nibble.inner as u1;\n\n    if parity == 1 {\n        nibble[0] = U4::from_u8(input[0] & 0x0f);\n        for i in 1..input.len() {\n            if i as u32 < length as u32 {\n                let x = input[i];\n                nibble[2 * i - 1] = U4::from_u8(x >> 4);\n                nibble[2 * i] = U4::from_u8(x & 0x0f);\n            }\n        }\n    } else {\n        for i in 0..2 {\n            if (i as u32) < length as u32 - 1 {\n                let x = input[i + 1];\n                nibble[2 * i] = U4::from_u8(x >> 4);\n                nibble[2 * i + 1] = U4::from_u8(x & 0x0f);\n            }\n        }\n    }\n\n    let out = (nibble, 2 * length + (parity as Field) - 2);\n\n    out\n}\n\nfn enc<let N: u32>(value: [u8; N], value_length: Field) -> ([u8; 32], Field) {\n    assert(value.len() as u8 >= value_length as u8);\n    let mut out_value = [0; 32];\n    if value_length == 0 {\n        let out = (out_value, value_length);\n        out\n    } else if value_length as u8 < 31 {\n        out_value[0] = 0x80 + value_length as u8;\n\n        for i in 1..value.len() {\n            out_value[i] = value[i - 1];\n        }\n\n        let out = (out_value, value_length + 1);\n\n        out\n    } else {\n        let out = (out_value, 32);\n        out\n    }\n}\n\nfn bitshift_literal_0() -> u64 {\n    let mut bits: u64 = 0;\n    bits |= 1 << 0;\n\n    bits\n}\nfn bitshift_literal_4() -> u64 {\n    let mut bits: u64 = 0;\n    bits |= 1 << 4;\n\n    bits\n}\nfn bitshift_variable(idx: u8) -> u64 {\n    let mut bits: u64 = 0;\n    bits |= 1 << idx;\n\n    bits\n}\n\nfn main(x: [u8; 5], z: Field, u: i16, v: i16) {\n    //Issue 1144\n    let (nib, len) = compact_decode(x, z);\n    assert(len == 5);\n    assert(\n        [nib[0], nib[1], nib[2], nib[3], nib[4]]\n            == [U4::from_u8(15), U4::from_u8(1), U4::from_u8(12), U4::from_u8(11), U4::from_u8(8)],\n    );\n    // Issue 1169\n    let val1 = [\n        0xb8, 0x8f, 0x61, 0xe6, 0xfb, 0xda, 0x83, 0xfb, 0xff, 0xfa, 0xbe, 0x36, 0x41, 0x12, 0x13,\n        0x74, 0x80, 0x39, 0x80, 0x18, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n        0x00, 0x00,\n    ];\n    let val1_length = 20;\n\n    let enc_val1 = enc(val1, val1_length);\n\n    assert(\n        enc_val1.0\n            == [\n                0x94, 0xb8, 0x8f, 0x61, 0xe6, 0xfb, 0xda, 0x83, 0xfb, 0xff, 0xfa, 0xbe, 0x36, 0x41,\n                0x12, 0x13, 0x74, 0x80, 0x39, 0x80, 0x18, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,\n                0x00, 0x00, 0x00, 0x00,\n            ],\n    );\n    assert(enc_val1.1 == 21);\n    // Issue 2399\n    let result_0 = bitshift_literal_0();\n    assert(result_0 == 1);\n    let result_4 = bitshift_literal_4();\n    assert(result_4 == 16);\n    let result_0 = bitshift_variable(0);\n    assert(result_0 == 1);\n    let result_4 = bitshift_variable(4);\n    assert(result_4 == 16);\n\n    // Issue 6609\n    assert(u % -13 == 0);\n    assert(u % v == 0);\n    assert(u % -11 == 4);\n    assert(-u % -11 == -4);\n    assert(u % -11 == u % (v + 2));\n    assert(-u % -11 == -u % (v + 2));\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/regression/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient",
    "directive_invert"
  ]
}
